--- a/package.json
+++ b/package.json
@@ -11,5 +11,17 @@
   "dependencies": {
     "vue": "^2.3.4",
     "vue-router": "^2.5.3"
+  },
+  "devDependencies": {
+    "babel-core": "^6.25.0",
+    "babel-loader": "^7.0.0",
+    "babel-preset-es2015": "^6.24.1",
+    "cross-env": "^5.0.1",
+    "css-loader": "^0.28.4",
+    "file-loader": "^0.11.2",
+    "vue-loader": "^12.2.1",
+    "vue-template-compiler": "^2.3.4",
+    "webpack": "2.6.1",
+    "webpack-dev-server": "^2.4.5"
   }
 }
