--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "html-loader": "^0.4.5",
     "vue": "^2.3.4",
     "vue-router": "^2.5.3"
   },
